plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.0'
}

group 'fr.hoenheimsports'
version 'unspecified'

java {
    sourceCompatibility = '20'
    targetCompatibility = '20'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
